--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ svg { border: solid black 1px;}
 
 <script>
   d3.select("#canvas").append("svg").attr("height", 80%).attr("width", 80%);
+  var xScale = d3.scale.linear().domain([0, 100]).range([20%, 80%]);
+  var xAxis = d3.svg.axis().scale(x).tickValues([0,10,20,30,40,50,60,70,80,90,100]);
 </script>
 </body>
 </html>
