--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@ svg { border: solid black 1px;}
 <div id="canvas"></div>
 
 <script>
+	var movies;
+
+	d3.json("movie_data.json", function (data) {
+		movies = data.Films;
+	});
   d3.select("#canvas").append("svg").attr("height", 80%).attr("width", 80%);
   var xScale = d3.scale.linear().domain([0, 100]).range([20%, 80%]);
   var xAxis = d3.svg.axis().scale(x).tickValues([0,10,20,30,40,50,60,70,80,90,100]);
